--- a/src/encoder/Main.fxml
+++ b/src/encoder/Main.fxml
@@ -21,10 +21,9 @@
         </ToggleButtonGroup>
         <ChoiceBox fx:id="audioOutBox" layoutX="50.0" layoutY="250.0" prefHeight="25.0" prefWidth="220.0" />
         <TextField fx:id="fSelectedField" layoutX="50.0" layoutY="100.0" onKeyPressed="#fSelectedFieldKeyPressed" onScroll="#fSelectedFieldScroll" prefHeight="25.0" prefWidth="60.0" text="1500" />
-        <Label fx:id="baseFrequencyLabel" layoutX="120.0" layoutY="100.0" prefHeight="25.0" prefWidth="150.0" text="base f : " />
-        <TextField fx:id="wsprMessageField" layoutX="50.0" layoutY="150.0" onKeyPressed="#wsprMessageFieldKeyPressed" prefHeight="25.0" prefWidth="120.0" text="ON4PB JO20 30" />
+        <TextField fx:id="wsprMessageField" layoutX="50.0" layoutY="150.0" prefHeight="25.0" prefWidth="120.0" text="ON4PB JO20 30" />
         <Label layoutX="180.0" layoutY="150.0" prefHeight="25.0" prefWidth="80.0" text="WSPR msg" />
-        <TextField fx:id="ftMessageField" layoutX="50.0" layoutY="200.0" onKeyPressed="#ftMessageFieldKeyPressed" prefHeight="25.0" prefWidth="120.0" text="FREE FRE FREE" />
+        <TextField fx:id="ftMessageField" layoutX="50.0" layoutY="200.0" prefHeight="25.0" prefWidth="120.0" text="FREE FRE FREE" />
         <Label layoutX="180.0" layoutY="200.0" prefHeight="25.0" prefWidth="100.0" text="FT4/FT8 msg" />
         <Slider fx:id="gainSlider" layoutX="400.0" layoutY="20.0" majorTickUnit="2.5" max="90.0" min="12.0" minorTickCount="1" orientation="VERTICAL" prefHeight="280.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="50.0" />
         <Label fx:id="gainLabel" layoutX="400.0" layoutY="310.0" prefHeight="25.0" prefWidth="70.0" text="gain in dB" />
